--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -30,7 +30,7 @@
   
 - name: Chetna Kuanr
   image: /assets/images/ChetnaKuanr.jpg
-  bio: "Chetna Kuanr is a first year PhD student at Northeastern University's Department of Sociology. She holds an M.A in International Relations from The University of Chicago, an M.A in Political Science from Jawaharlal Nehru University and a B.A. in Economics (with honors) from University of Delhi. Substantively, her research focuses on examining the relationship between spatial and social boundaries to understand populism and social movements with a regional focus on South Asia. More broadly, she is interested in theories of urban sociology focused on the Global South and combining computational methods and machine learning with qualitative methods. Prior to entering the program, she worked as a Research Assistant for United Nations Development Programme, and The Chicago Center on Democracy."
+  bio: "Chetna Kuanr is a first year PhD student at Northeastern University's Department of Sociology. Substantively, her research focuses on examining the relationship between spatial and social boundaries to understand populism and social movements with a regional focus on South Asia. More broadly, she is interested in theories of urban sociology focused on the Global South and combining computational methods and machine learning with qualitative methods."
   website: https://cssh.northeastern.edu/student/chetna-kuanr/
   
 - name: Wenhao Li
