--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -237,13 +237,11 @@
         
         - MODERATOR: Naniette Coleman (SICSS-Princeton 2019, organizer of SICSS-Howard/Mathematica 2020-present)
         
-        - Speaker TBA
+        - [Andre Brock](https://andrebrock.academia.edu/)
         
-        - Speaker TBA
+        - [Courtney D. Cogburn](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/)
         
-        - Speaker TBA
-        
-        - Speaker TBA
+        - [Kyla McMullen](http://kylamcmullen.com/)
         
         - Speaker TBA'
         
