--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -269,7 +269,7 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:30 Logistics (*Zoom*)"
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)  
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)" 
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
     - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) - LIVE session to include Q&A and office hour (*Zoom*)"
     
