--- a/_data/2022/haifa/people.yml
+++ b/_data/2022/haifa/people.yml
@@ -34,6 +34,11 @@ speakers:
       image: /assets/images/Amit_Donner.jpg
       website:
 
+    - name: Eitan Hemed
+      bio: "I am a Senior PhD candidate in experimental Psychology, studying how the human mind evaluates the effect of motor actions on the environment. I will be taking part in the SICSS as a project tutor. I gained my programming experience during my graduate studies, following several years of working with multiple researchers in academia on developing behavioral experiments and pipelines for data processing and analysis. Additionally, I taught Python to graduate students on academic courses and workshops."
+      image: /assets/images/Eitan_Hemed.jpg
+      website: https://twitter.com/EitanHemed
+      
     - name: Igor Kleion
       bio: "Research Areas: Queuing theory, Image processing."
       image: /assets/images/Igor-kleiner.jpg
