schedule added, participants partly added

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -120,4 +120,20 @@ guest_assistants:
 participants: 
   title: Participants
   people:
-   - name: Coming soon...
+    - name: Thizwilondi Madima
+      image: /assets/images/1UeHzeuevd4VHIln1oM41Owd3tgUWYMHu.jpeg
+      bio: "Thizwilondi Madima is a Doctor of Philosophy in African Studies and Bachelor of
+      Indigenous Knowledge Systems lecturer at the University of Venda, Faculty of Humanities     Social sciences and Education. She is housed in the department of Indigenous Knowledges and
+     Heritage Studies. She is a multidisciplinary, interdisciplinary, and transdisciplinary author
+     and researcher with academic publications. Her interest is in the preservation of cultural  heritage through digitisation and the decolonisation of the curriculum in institutions of
+     higher learning."
+
+    - name: Sisanda Nkoala
+      bio: "Dr Sisanda Nkoala is an interdisciplinary scholar with interests in language, rhetoric, media studies, and multlingualism. She is a senior lecturer at the Cape Peninsula University of Technology and holds a PhD in rhetoric studies from the University of Cape Town. Dr Nkoala is a former award winning broadcast journalist."
+      image: /assets/images/1nt1NmMhJAZaOWqcUdvOy0T4fPsFPJd16.jpeg
+
+    - name: Phelokazi Mkungeka
+      bio: "PHELOKAZI MKUNGEKA is a second year Master of Social Science with specialisation in     Sociology student at the University of the Free State. I work at Interdisciplinary Centre for     Digital Future at UFS we work in collaboration with the National Department of Health to     provide weekly updates of COVID-19. We are part of the social listening teams that deal with     COVID-19 to provide weekly updates."
+      image: /assets/images/1NtEAi_ajZBvcrslEG6oHf-Se7taEmeFl.jpeg
+
+
