--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -1,3 +1,82 @@
-- date: June 13, 2022
+- date: Monday June 13, 2022
+  name: Introduction and ethics
   events:
-    - name: "Schedule coming soon..."
+    - name: "8:00 - 8:25 Introduction and logistics"
+    - name: "8:30 - 9:55 Opening Keynote (virtual) by Dr. Sandra Gonzalez-Bailon (UPenn): Key Questions in Computational Social Science"
+    - name: "10:00 - 11:55 Morning session"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Afternoon session and group activities"
+
+- date: Tuesday June 14, 2022
+  name: Collecting digital trace data
+  events:
+    - name: "9:00 - 9:55 Morning session"
+    - name: "10:00 - 11:55 Guest lecture (virtual) by Suhem Parack (Twitter): Using the Twitter API for research"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Afternoon session and group activities"
+
+- date: Wednesday June 15, 2022
+  name: Text as Data
+  events:
+    - name: "9:00 - 9:55 Morning session"
+    - name: "10:00 - 11:55 Guest lecture (virtual) by Dr. Jisun An (SMU): Title TBC"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Afternoon session and group activities"
+
+- date: Thursday June 16, 2022
+  events: Experiments in the Digital Era
+    - name: "9:00 - 9:55 Morning session"
+    - name: "10:00 - 11:55 Guest lecture (virtual) by Dr. Hai Liang (CUHK): Detection of Content Incivility and Its Causal Effects using Machine Learning"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Afternoon session and group activities"
+
+- date: Friday June 17, 2022
+  events: Topic TBC
+    - name: "9:00 - 9:55 Morning session"
+    - name: "10:00 - 11:55 Guest lecture (in person) by Dr. Prasanta Bhattacharya (A*STAR): Modeling the Dynamics of Social Networks and Behavior: Concepts, Methods and Applications"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 16:30 Afternoon session and group activities"
+    - name: "17:30 - 18:00 Dinner and social event"
+    - name: "18:00 - 20:30 Screening of play: Elisa followed by dialogue with director"
+
+- date: Saturday June 18, 2022
+  name: "Day off"
+
+- date: Sunday June 19, 2022
+  name: "Day off"
+
+- date: Monday June 21, 2022
+  name: Project Development
+  events:
+    - name: "9:00 - 12:00 Participants work on group projects"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Participants work on group projects"
+
+- date: Tuesday June 22, 2022
+  name: Project Development
+  events:
+    - name: "9:00 - 12:00 Participants work on group projects"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Participants work on group projects"
+
+- date: Wednesday June 23, 2022
+  name: Project Development
+  name: ""
+  events:
+    - name: "9:00 - 12:00 Participants work on group projects"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Participants work on group projects"
+
+- date: Thursday June 24, 2022
+  name: Project Development
+  events:
+    - name: "9:00 - 12:00 Participants work on group projects"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Participants work on group projects"
+
+- date: Friday June 25, 2022
+  name: Project Presentations
+  events:
+    - name: "10:00 - 12:00 Closing keynote by Dr. Kokil Jaidka: From Noisy Data to Interpretation: the Next Frontier for the study of Southeast Asian online communities"
+    - name: "12:00 - 13:00 Lunch"
+    - name: "13:00 - 17:00 Group presentations"
