--- a/_data/2022/haifa/teaching_assistants.yml
+++ b/_data/2022/haifa/teaching_assistants.yml
@@ -1,5 +1,5 @@
 - name: Amit Donner
-  bio: "I am currently completing my master’s degree in statistics at Haifa University. I have vast experience as a teaching assistant for a dozen courses in the university’s statistics department. These have varied from courses in probability and statistical theory to machine learning, statistical modeling and programming in Python and R. I also have experience helping social scientists to conceptualize, collect and analyze the statistical data they need for their research."
+  bio: "I am currently completing my master’s degree in statistics at Haifa University. I have vast experience as a teaching assistant for a dozen courses in the university’s statistics department. These have varied from courses in probability and statistical theory to machine learning, statistical modeling and programming in Python and R. I also have experience helping social scientists to conceptualize, collect and analyze the data they need for their research."
   image: /assets/images/Amit_Donner.jpg
   website:
 
