--- a/_data/2022/rutgers/speakers.yml
+++ b/_data/2022/rutgers/speakers.yml
@@ -1,3 +1,8 @@
+- name: P.M. Aronow
+  bio: "Associate Professor of Political Science, Statistics and Data Science, and Biostatistics at Yale University."
+  website: https://pmaronow.github.io/ 
+  
+
 - name: Melissa Dreier
   image: /assets/images/MelissaDreier.png
   bio: "Clinical Psychology PhD student at Rutgers University."
