--- a/_data/2022/rutgers/participants.yml
+++ b/_data/2022/rutgers/participants.yml
@@ -1,1 +1,95 @@
-- name:
+- name: Akeela Careem
+  image: /assets/images/sicss22_careem_akeela.jpg
+  bio: "Akeela is a PhD candidate in Social Psychology at Rutgers University. Her research interests include political protest, extremism, and motivated reasoning."
+
+- name: Elias Chavarria-Mora
+  image: /assets/images/sicss22_chavarria-mora_elias.jpeg
+  bio: "Elias Chavarria-Mora is a political science PhD candidate at the University of Pittsburgh, focusing on comparative political behavior. He has an MA from the same university and received his undergraduate degree from the University of Costa Rica. His dissertation focuses on the use of social media for electoral campaigning by political parties. Prior research has mostly focused on protest politics and party competition and has been published in Latin American, Spanish, and American journals."
+  website: https://chavarriamora.com/
+  
+- name: Sung Eun Choi
+  image: /assets/images/sicss22_choi_sungeun.jpg
+  bio: "Sung Eun is a doctoral student in political science at Rutgers University. His research interests include international security, in particular interstate war and peace, alliance politics, and coercive diplomacy. His current research examines the effects of alliances on the durability of postwar peace after interstate wars."
+  
+- name: Joanna Coleman
+  image: /assets/images/sicss22_coleman_joanna.jpg
+  bio: "Joanna Coleman is an Assistant Professor of Urban Ecology at Queens College at the City University of New York, having recently (2021) come from Singapore, where she was a Senior Lecturer at National University of Singapore. Her applied, interdisciplinary research agenda (natural & social sciences) fundamentally aims to tackle the environmental crisis, which is strongly driven by urbanisation. Joanna is also a core member of two working groups (Human Dimensions & Bat Trade) in the IUCN Species Survival Commission, Bat Specialist Group. As such, she and her collaborators study human-bat relationships, try to mitigate conflicts and aim to end the unsustainable trade in bats."
+  website: https://urban-ecologist.com/
+  
+- name: Melissa Dreier
+  image: /assets/images/sicss22_dreier_melissa.png
+  bio: "Melissa is a PhD student in the Hamilton Lab at Rutgers University. She studies how adolescent development intersects with a rise in mental health concerns, including suicide and other self-destructive behaviors. Before Rutgers, Melissa got her BA at Harvard University and completed a post-baccalaureate research coordinator position at Massachusetts General Hospital."
+  website: https://twitter.com/DreierMelissa
+
+- name: Conor Gaughan 
+  image: /assets/images/sicss22_gaughan_conor.jpg
+  bio: "I am a 1st year PhD student in Politics at the University of Southampton. I specialise in the use of data science and computational techniques to map the social media networks of political elites in the U.K."
+  website: https://twitter.com/ConorGaughan2
+
+- name: Dhia Hammami
+  image: 
+  bio: 
+  website: 
+  
+- name: Mona Kleinberg
+  image: 
+  bio: 
+  website:   
+  
+- name: Samantha Koprowski
+  image: /assets/images/sicss22_koprowski_samantha.jpg
+  bio: "Samantha Koprowski is a PhD student in Political Science at Rutgers University studying Women & Politics and American Politics. Her research interests include women's campaigning strategies and issues of women's representation in U.S. legislative institutions. She is particularly interested in social media data collection and automated text analysis."
+  website: https://twitter.com/SamJKop
+  
+- name: Ying Liu
+  image: /assets/images/sicss22_liu_ying.jpg
+  bio: "Ying Liu is a doctoral student in the School of Public Affairs and Administration at Rutgers University–Newark. Her substantive research interests include public and nonprofit management, organizational behavior and theory, representative bureaucracy, and social equity. Methodologically, she is interested in experimental design and analysis, causal inference, and computational methods."
+  website: https://twitter.com/yingliu_pa
+  
+- name: Lü Pin 
+  image: /assets/images/sicss22_lü_pin.png
+  bio: "Lü Pin s a PhD student in the Department of Political Science at Rutgers University. Her research interests are in strategic directions of the Chinese feminist movement in an authoritarian political context. She received her M.A. in Gender Studies from the University of Albany. Outside of academia, she has been working as an organizer for the feminist movement in China for over 20 years."
+  website: https://twitter.com/pinerpiner
+
+- name: Qiyao Pan 
+  image: /assets/images/sicss22_pan_qiyao.jpg
+  bio: "Qiyao Pan is a doctoral student in sociology at CUNY Graduate Center. She is also affliated with CUNY Institute for Demographic Research (CIDR). With her broad interests in urban sociology, spatial demography, migration and computational methods, her current research examines the neighborhood effect on restaurant closings using spatial analysis."
+  
+- name: George Quinn 
+  image: 
+  bio: 
+  website: 
+
+- name: Casey Randazzo 
+  image: 
+  bio: 
+  website: 
+  
+- name: Huma Rasheed
+  image: /assets/images/sicss22_rasheed_huma.jpg
+  bio: "Huma Rasheed is a doctoral candidate in Communication at the University of Delaware. She studies narrative persuasion, incivility, and misinformation using experimental and computational research methods. Huma received her bachelor’s and master’s degrees in Management with the highest accolades. She has six years of experience working with international non-governmental organizations."
+  website: https://www.communication.udel.edu/people/huma#biography
+  
+- name: Lina Saud
+  image: /assets/images/sicss22_saud_lina.HEIC
+  bio: "Lina Saud recently received her PhD in social psychology at Rutgers University and will begin working as a postdoctoral researcher with Dr. Rezarta Bilali at New York University this fall. Her research examines the influence of narratives on various social issues including responses to collective blame, attitudes toward immigrants, and support for contemporary protest movements."
+  website: https://www.polisci.rutgers.edu/cb-profile/andreyt 
+
+- name: Alice Timken
+  image: 
+  bio: 
+  website: 
+  
+- name: Anthony Vanky
+  image: /assets/images/sicss22_vanky_anthony.jpg
+  bio: "Anthony Vanky is an Assistant Professor in Urban and Regional Planning at the University of Michigan Taubman College. He is also affiliated with the UM Digital Studies Institute and the Michigan Institute for Data Science."
+  website: https://vanky.co 
+  
+- name: Gahwan Yoo 
+  image: 
+  bio: 
+  website:   
+  
+
+  
+  
