--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -57,7 +57,7 @@
   events:
     - name: "10:00 - 12:00 Announcements & Group Project Work"
     - name: "12:00 - 1:00 Lunch"
-    - name: "1:00 - 2:00 Guest Lecture: Lauren Klein"
+    - name: "1:00 - 2:00 Guest Lecture: Lauren Klein, Emory Digital Humanities Lab"
     - name: "2:00 - 4:00 Group Project Work"
 
 - date: 2022-06-28
