--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -43,7 +43,6 @@
           **Review Pre-arrival materials**
           
           
-          
                 - [Bootcamp](https://sicss.io/boot_camp/)
               
                 - [Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments](https://sicss.io/curriculum)
@@ -53,7 +52,6 @@
     
         
           **Get to know the SICSS & SICSS-Howard/Mathematica Planning Team**
-          
           
                   
                 - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [(video)](https://youtu.be/PGhI39loSYg)
@@ -69,7 +67,6 @@
    
                   
           **Changing the Game**
-          
           
           
                - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [(video)](https://youtu.be/FYES4RCRaZw)
@@ -100,7 +97,7 @@
     - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discussions (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 LIVE "Getting the most out of your SICSS experience" - Roundtable discussion with SICSS alums of color (*Zoom*) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: '12:00 - 1:00 LIVE "Getting the most out of your SICSS-Howard/Mathematica experience" - Roundtable discussion with SICSS alums of color (*Zoom*) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
     
         - MODERATOR: Naniette Coleman (SICSS-Princeton 2019, organizer of SICSS-Howard/Mathematica 2020-present)
         
