--- a/_data/2022/rutgers/participants.yml
+++ b/_data/2022/rutgers/participants.yml
@@ -48,7 +48,7 @@
   
 - name: Lü Pin 
   image: /assets/images/sicss22_lü_pin.png
-  bio: "Lü Pin s a PhD student in the Department of Political Science at Rutgers University. Her research interests are in strategic directions of the Chinese feminist movement in an authoritarian political context. She received her M.A. in Gender Studies from the University of Albany. Outside of academia, she has been working as an organizer for the feminist movement in China for over 20 years."
+  bio: "Lü Pin is a PhD student in the Department of Political Science at Rutgers University. Her research interests are in strategic directions of the Chinese feminist movement in an authoritarian political context. She received her M.A. in Gender Studies from the University of Albany. Outside of academia, she has been working as an organizer for the feminist movement in China for over 20 years."
   website: https://twitter.com/pinerpiner
 
 - name: Qiyao Pan 
