--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -29,3 +29,7 @@
 - name: Maria Litova
   image: /assests/images/Maria_Litova.jpg
   bio: "Maria Litova is a research assistant at the Centre for Social Data Science, University of Helsinki, Finland. She got her first Master’s degree in Sociology and currently is a Master’s student at the University of Helsinki with major in Social Data Science. Maria is interested in natural language processing, machine learning, healthcare and medical data analysis, youth research and well-being issues."
+
+  name: Antero Olakivi
+  image: /assests/images/Antero Olakivi_E3F7622.jpg
+  bio: "Antero Olakivi, D. Soc.Sc., is a postdoctoral researcher at the University of Helsinki, in the Centre of Excellence in Research on Ageing and Care. Olakivi’s research interests deal with intersecting inequalities in everyday life, especially in the context of care and care work, and with the methodology of social sciences."
