--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -10,7 +10,12 @@ faculty:
       image: /assets/images/NanietteHeadshot.jpeg
       bio: "Naniette H. Coleman is a Ph.D. candidate in the Sociology Department at the University of California Berkeley and a UC-National Lab In-Residence Graduate Fellow at Los Alamos National Lab. Since 2016 Naniette has directed the AAC&U award winning Interdisciplinary Research Group on Privacy at Berkeley. Naniette is an affiliate of the Institute for the Study of Societal Issues, the Center for Long-term Cybersecurity, and the Center for Technology, Society, and Policy at Berkeley as well as the Belfer Center for Science and International Affairs, and Berkman-Klein Center for the Internet and Society at Harvard University. Naniette’s research sits at the intersection of the sociology of culture and organizations and focuses on cybersecurity, surveillance, and privacy in the US context. Specifically Naniette’s research examines how organizations assess risk, make decisions, and respond to data breaches and organizational compliance with state, federal, and international privacy laws.  Naniette holds a Master of Public Administration with a specialization in Democracy, Politics, and Institutions from the Harvard Kennedy School of Government, and both an M.A. in Economics and a B.A. in Communication from the University at Buffalo, SUNY.  A non-traditional student, Naniette’s prior professional experience includes local, state, and federal service, as well as work for two international organizations, and two universities."
       website: http://naniettecoleman.com
-    
+ 
+    - name: Nicole Jenkins, Ph.D.
+      image: /assets/images/Nicole_Jenkins.png
+      bio: "Nicole is currently an Assistant Professor in the Department of Sociology and Criminology at Howard University. She received her Doctoral degree from the University of Nevada Las Vegas in the Department of Sociology in 2020. She obtained an M.A. in Sociology in 2017 and B.A. in Sociology in 2015 from the University of Nevada Las Vegas. In 2013, she received an A.A. in Criminal Justice after serving six years of active duty in the United States Air Force as Military Police. She is a proud advocate for social justice and is committed to teaching with such emphasis in topics such as race and ethnic studies, sociology of poverty, problems of the black community, and research methods."
+      website: https://profiles.howard.edu/profile/58581/nicole-dezrea-jenkins
+
 
 opening:
   title: Opening Plenary Speaker 
