--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -90,9 +90,11 @@
     <br/> 
     Required Readings:
     
+    - <a href='https://doi.org/10.1371/journal.pcbi.1008117' target='_blank'>Real-time estimation of disease activity in emerging outbreaks using internet search information</a>
+    
     - <a href='https://ojs.aaai.org/index.php/ICWSM/article/view/3360' target='_blank'>Using search queries to understand health information needs in Africa</a>
     
-    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation sSpread in eight countries: Exponential growth modeling study</a>
+    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation spread in eight countries: Exponential growth modeling study</a>
     
     - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
     
