--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -3,6 +3,11 @@
   bio: "Maral Abdollahi is a doctoral candidate at the Hubbard School of Journalism and Mass Communication at the University of Minnesota. She has a master's degree from the University of Vienna. Maral studies consumers' perceptions and responses regarding virtual influencers. She is passionate about advertising, emerging technologies, and consumer psychology."
   website: https://www.linkedin.com/in/maral-a-7a448797/
 
+- name: Sara Bano, Ph.D.
+  image: /assets/images/bano.jpeg
+  bio: "Sara Bano is an assistant professor in the School of Education North Dakota State University. Her research interests focus on international and comparative higher education, adult learning, and transformative learning in global context. Her recent projects are examining transformative learning for nursing faculty in online educational environments. She hopes her research will positively impact adult learners’ experiences in diverse educational contexts."
+  website: https://www.ndsu.edu/edol/about_us/faculty/
+  
 - name: Jamie M. Chen, Ph.D.
   image: /assets/images/jamiechen.png
   bio: "Jamie M. Chen is from Department of Management and Marketing at North Dakota State University’s College of Business. With a Ph.D. degree in regional economics, Jamie has built an expertise in service management and digital marketing innovations. Her future research would focus on social media data mining (e.g., content analysis) to develop new business models."
@@ -22,6 +27,11 @@
   image: /assets/images/yumingfang.png
   bio: "Yuming Fang is a third-year PhD student in the Hubbard School of Journalism and Mass Communication at the University of Minnesota. Her research interests are in health communication, specifically examining how individuals respond to health misinformation and misinformation correction interventions."
   website: https://twitter.com/yuming_fang/
+
+- name: Tzu-Hsin Huang
+  image: /assets/images/HuangTH.jpeg
+  bio: "Tzu-Hsin Huang is a doctoral student at Brown School, Washington University in St. Louis. Her research focuses on child maltreatment prevention and intervention. She had over a decade of practice experience in child protection services and policy implementation of the Convention on the Rights of the Child (CRC)."
+  website: https://sites.wustl.edu/thhuang/
 
 - name: Prasanna Humagain, Ph.D.
   image: /assets/images/PrasannaHumagain.png
@@ -53,6 +63,11 @@
   bio: "Mir Rabby is a master’s student in the Department of Communication at North Dakota State University. His research interest lies in organizational and small group communication, such as anonymity, social influence, and group processes. He aims to employ computational methods (e.g., text mining) for analysis of interactional data."
   website: https://www.ndsu.edu/communication/about/masters_gtas/ 
   
+- name: Sarah Thorngate
+  image: /assets/images/thorngate_02.jpg
+  bio: "Sarah Thorngate is a librarian at Northwestern University and a Ph.D. student in sociology at Loyola University Chicago. Her research interests lie in social class inequalities in higher education, and in how race, class, and gender shape information seeking and information marginalization in maternal health and mothering."
+  website: https://www.linkedin.com/in/sarah-thorngate
+
 - name: Michael Vosburg
   image: /assets/images/michaelvosburg.jpeg
   bio: "Michael Vosburg is a PhD student at North Dakota State University's Department of Communication. He has taught and practiced photojournalism in four states for more than 30 years. His research interest lies in visual communication. He hopes to develop concepts and theory about effects of visual communication."
